# github.io

./: .gitignore  Init.txt  README.md  index.html  package.json
data/: sample-feed.json
docs/: PLATFORM_BLUEPRINT.md
examples/: sample.plugin.json
plugins/: plugin.schema.json
src/: App.svelte  app.html  caseBoard.js  feed.js  globe.js  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/routes/: +page.svelte
